update degree programme modules description

--- a/degree-programme.html
+++ b/degree-programme.html
@@ -86,12 +86,12 @@
               <h1>Introduction to Software Engineering</h1>
               <h2>ACADEMIC YEAR 2020-21</h2>
               <img src="./img/temp.jpg" alt="temp.jpg" />
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-                 dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercit
-                 ation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute iru
-                 re dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pari
-                 atur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mol
-                 lit anim id est laborum.</p>
+              <p>This module introduces the Software Engineering concepts that are needed to develop software systems
+                that can meet basic functional requirements within a given problem domain.
+                <br>
+                <br>
+                A major part of the module involves students working in teams to develop a web-based software system,
+                which gives practical experience in teamwork and managing software projects and their products.</p>
             </div>
           </div>
         </section>
@@ -110,12 +110,12 @@
               <h1>Foundations of Computer Science</h1>
               <h2>ACADEMIC YEAR 2020-21</h2>
               <img src="./img/temp.jpg" alt="temp.jpg" />
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-                 dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercit
-                 ation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute iru
-                 re dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pari
-                 atur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mol
-                 lit anim id est laborum.</p>
+              <p>The course consists of approximately 10 blocks of 2-3 weeks work each. Each block develops mathematical
+                concepts and techniques that are of foundational importance to computing. Lectures and problem classes will be used.
+                <br>
+                <br>
+                The intention is to enthuse about these topics, to demonstrate why they are important to us, to lay the foundations
+                of their knowledge and prepare students for future computing courses.</p>
             </div>
           </div>
         </section>
@@ -134,12 +134,13 @@
               <h1>Java Programming</h1>
               <h2>ACADEMIC YEAR 2020-21</h2>
               <img src="./img/temp.jpg" alt="temp.jpg" />
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-                 dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercit
-                 ation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute iru
-                 re dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pari
-                 atur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mol
-                 lit anim id est laborum.</p>
+              <p>This module introduces programming concepts through the Java programming language. Program design and the use of
+                testing to drive program creation are also covered.
+                <br>
+                <br>
+                Initial focus is placed on the structured aspects typical of
+                many programming languages: the ideas of a sequence, selection and repetition. The object-oriented approach to
+                building large software systems from components is then presented.</p>
             </div>
           </div>
         </section>
@@ -158,12 +159,14 @@
               <h1>Machines and Intelligence</h1>
               <h2>ACADEMIC YEAR 2020-21</h2>
               <img src="./img/temp.jpg" alt="temp.jpg" />
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-                 dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercit
-                 ation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute iru
-                 re dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pari
-                 atur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mol
-                 lit anim id est laborum.</p>
+              <p>This module provides an introduction to Artificial Intelligence, and to key concepts and problems in the field,
+                such as whether a computer is capable of understanding, and whether humans should themselves be viewed as machines.
+              <br>
+              <br>
+              As well as providing a first encounter with the main issues that underlie attempts to create Artificial Intelligence,
+              the module also has a more practical component that introduces algorithms and data structures for AI problem solving
+              through practical programming examples, as well as hands-on experience with simple programming of robots.              
+              </p>
             </div>
           </div>
         </section>
@@ -182,12 +185,14 @@
               <h1>Web and Internet Technology</h1>
               <h2>AUTUMN 2020-21</h2>
               <img src="./img/temp.jpg" alt="temp.jpg" />
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-                 dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercit
-                 ation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute iru
-                 re dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pari
-                 atur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mol
-                 lit anim id est laborum.</p>
+              <p>This module is for students studying Computer Science as a main subject. The Web and the Internet are now pervasive
+                in modern life, providing an information resource, supporting 'cloud computing', and promoting novel, interactive
+                solutions to computing-related activities.
+                <br>
+                <br>
+                This module will cover the basics of networks and internetworking, the Web
+                in society, including information security and the technologies that are used in Web development, with an emphasis on
+                building a simple interactive website using HTML, CSS and JavaScript.</p>
             </div>
           </div>
         </section>
@@ -206,12 +211,15 @@
               <h1>Introduction to Algorithms and Data Structures</h1>
               <h2>SPRING 2020-21</h2>
               <img src="./img/temp.jpg" alt="temp.jpg" />
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-                 dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercit
-                 ation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute iru
-                 re dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pari
-                 atur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mol
-                 lit anim id est laborum.</p>
+              <p>Algorithms and algorithmic problem solving are at the heart of computer science. This module introduces
+                students to the design and analysis of efficient algorithms and data structures. Students learn how to
+                quantify the efficiency of an algorithm and what algorithmic solutions are efficient.
+              <br>
+              <br>
+                Techniques for designing efficient algorithms are taught, including efficient data structures for storing
+                and retrieving data. This is done using illustrative and fundamental problems: searching, sorting, graph
+                algorithms, and combinatorial problems such as finding the shortest paths in networks.
+              </p>
             </div>
           </div>
         </section>
@@ -230,12 +238,15 @@
               <h1>Global Engineering Challenge Week</h1>
               <h2>AUTUMN 2020-21</h2>
               <img src="./img/temp.jpg" alt="temp.jpg" />
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-                 dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercit
-                 ation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute iru
-                 re dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pari
-                 atur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mol
-                 lit anim id est laborum.</p>
+              <p>The Faculty-wide Global Engineering Challenge Week is a compulsory part of the first-year programme, and the
+                project has been designed to develop student academic, transferable and employability skills as well as widen
+                their horizons as global citizens.
+              <br>
+              <br>
+              Working in multi-disciplinary groups of six, for a full week, all students in the Faculty choose from a number
+              of projects arranged under a range of themes including Water, ICT, Waste Management and Energy with scenarios
+              set in a developing country.
+              </p>
             </div>
           </div>
         </section>
@@ -254,12 +265,13 @@
               <h1>Cognitive Psychology</h1>
               <h2>ACADEMIC YEAR 2020-21</h2>
               <img src="./img/temp.jpg" alt="temp.jpg" />
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-                 dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercit
-                 ation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute iru
-                 re dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pari
-                 atur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mol
-                 lit anim id est laborum.</p>
+              <p>This unit provides an overview of core components of cognition, and principles of their investigation. The
+                module covers perception, attention, performance, cognitive neuroscience, language, learning, memory and reasoning.
+              <br>
+              <br>
+                It introduces and explored key concepts, theoretical perspectives and foundational methods. Examples of key studies
+                in cognitive psychology will be considered critically.
+              </p>
             </div>
           </div>
         </section>
