update images on degree programme page & reorganize img file structure

--- a/data.html
+++ b/data.html
@@ -53,7 +53,7 @@
         <div id="line-3"></div>
       </div>
       <h1 class="page-title-info" id="page-title-info-mobile">DATA/JS</h1>
-      <img class="logo" id="logo-mobile" src="./img/logo_transparent.png" alt="logo"/>
+      <img class="logo" id="logo-mobile" src="./img/header/logo_transparent.png" alt="logo"/>
     </header>
     <header id="desktop-header">
       <div id="menu-desktop-icon">
@@ -66,7 +66,7 @@
         </div>
       </div>
       <h1 class="page-title-info" id="page-title-info-desktop">DATA/JS</h1>
-      <img class="logo" id="logo-desktop" src="./img/logo_transparent.png" alt="logo"/>
+      <img class="logo" id="logo-desktop" src="./img/header/logo_transparent.png" alt="logo"/>
     </header>
     <main>
       <section>
