--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <div id="line-3"></div>
       </div>
       <h1 class="page-title-info" id="page-title-info-mobile">HOME</h1>
-      <img class="logo" id="logo-mobile" src="./img/logo_transparent.png" alt="logo"/>
+      <img class="logo" id="logo-mobile" src="./img/header/logo_transparent.png" alt="logo"/>
     </header>
     <header id="desktop-header">
       <div id="menu-desktop-icon">
@@ -63,19 +63,19 @@
         </div>
       </div>
       <h1 class="page-title-info" id="page-title-info-desktop">HOME</h1>
-      <img class="logo" id="logo-desktop" src="./img/logo_transparent.png" alt="logo"/>
+      <img class="logo" id="logo-desktop" src="./img/header/logo_transparent.png" alt="logo"/>
     </header>
     <main>
       <section>
         <h1 id="welcome">Welcome!</h1>
-        <img id="profile-picture" src="./img/profile_picture.png" alt="Picture Of Me">
+        <img id="profile-picture" src="./img/home/profile_picture.png" alt="Picture Of Me">
         <h2 id="name">Jedrzej Golebiewski</h1>
         <p>
           Yep. That's my name and this is my website :)
         </p>
         <div id="about-me-images">
-        <img class="about-me-image" src="./img/neural_network.png" alt="Image Of Neural Network">
-        <img class="about-me-image" src="./img/HTML_tag.png" alt="Image Of HTML Tag">
+        <img class="about-me-image" src="./img/home/neural_network.png" alt="Image Of Neural Network">
+        <img class="about-me-image" src="./img/home/HTML_tag.png" alt="Image Of HTML Tag">
       </div>
         <p id="about-me-paragraph">
           I'm a first year AI & Computer Science student at The University Of Sheffield.
