--- a/degree-programme.html
+++ b/degree-programme.html
@@ -53,7 +53,7 @@
       <div id="line-3"></div>
     </div>
     <h1 class="page-title-info" id="page-title-info-mobile">DEGREE PROGRAMME</h1>
-    <img class="logo" id="logo-mobile" src="./img/logo_transparent.png" alt="logo"/>
+    <img class="logo" id="logo-mobile" src="./img/header/logo_transparent.png" alt="logo"/>
   </header>
   <header id="desktop-header">
     <div id="menu-desktop-icon">
@@ -66,7 +66,7 @@
       </div>
     </div>
     <h1 class="page-title-info" id="page-title-info-desktop">DEGREE PROGRAMME</h1>
-    <img class="logo" id="logo-desktop" src="./img/logo_transparent.png" alt="logo"/>
+    <img class="logo" id="logo-desktop" src="./img/header/logo_transparent.png" alt="logo"/>
   </header>
     <main>
       <h1 id="prefix">My year 1 modules:</h1>
@@ -85,7 +85,7 @@
             <div class="mobile-desciption-inner">
               <h1>Introduction to Software Engineering</h1>
               <h2>ACADEMIC YEAR 2020-21</h2>
-              <img src="./img/temp.jpg" alt="temp.jpg" />
+              <img src="./img/degree_programme/software_engineering.jpg" alt="module picture" />
               <p>This module introduces the Software Engineering concepts that are needed to develop software systems
                 that can meet basic functional requirements within a given problem domain.
                 <br>
@@ -109,7 +109,7 @@
             <div class="mobile-desciption-inner">
               <h1>Foundations of Computer Science</h1>
               <h2>ACADEMIC YEAR 2020-21</h2>
-              <img src="./img/temp.jpg" alt="temp.jpg" />
+              <img src="./img/degree_programme/computer-science.jpg" alt="module picture" />
               <p>The course consists of approximately 10 blocks of 2-3 weeks work each. Each block develops mathematical
                 concepts and techniques that are of foundational importance to computing. Lectures and problem classes will be used.
                 <br>
@@ -133,7 +133,7 @@
             <div class="mobile-desciption-inner">
               <h1>Java Programming</h1>
               <h2>ACADEMIC YEAR 2020-21</h2>
-              <img src="./img/temp.jpg" alt="temp.jpg" />
+              <img src="./img/degree_programme/java.jpg" alt="module picture" />
               <p>This module introduces programming concepts through the Java programming language. Program design and the use of
                 testing to drive program creation are also covered.
                 <br>
@@ -158,7 +158,7 @@
             <div class="mobile-desciption-inner">
               <h1>Machines and Intelligence</h1>
               <h2>ACADEMIC YEAR 2020-21</h2>
-              <img src="./img/temp.jpg" alt="temp.jpg" />
+              <img src="./img/degree_programme/machines_intelligence.jpg" alt="module picture" />
               <p>This module provides an introduction to Artificial Intelligence, and to key concepts and problems in the field,
                 such as whether a computer is capable of understanding, and whether humans should themselves be viewed as machines.
               <br>
@@ -184,7 +184,7 @@
             <div class="mobile-desciption-inner">
               <h1>Web and Internet Technology</h1>
               <h2>AUTUMN 2020-21</h2>
-              <img src="./img/temp.jpg" alt="temp.jpg" />
+              <img src="./img/degree_programme/web_technology.jpg" alt="module picture" />
               <p>This module is for students studying Computer Science as a main subject. The Web and the Internet are now pervasive
                 in modern life, providing an information resource, supporting 'cloud computing', and promoting novel, interactive
                 solutions to computing-related activities.
@@ -210,7 +210,7 @@
             <div class="mobile-desciption-inner">
               <h1>Introduction to Algorithms and Data Structures</h1>
               <h2>SPRING 2020-21</h2>
-              <img src="./img/temp.jpg" alt="temp.jpg" />
+              <img src="./img/degree_programme/algorithms_data.jpg" alt="module picture" />
               <p>Algorithms and algorithmic problem solving are at the heart of computer science. This module introduces
                 students to the design and analysis of efficient algorithms and data structures. Students learn how to
                 quantify the efficiency of an algorithm and what algorithmic solutions are efficient.
@@ -237,7 +237,7 @@
             <div class="mobile-desciption-inner">
               <h1>Global Engineering Challenge Week</h1>
               <h2>AUTUMN 2020-21</h2>
-              <img src="./img/temp.jpg" alt="temp.jpg" />
+              <img src="./img/degree_programme/engineering_week.jpg" alt="module picture" />
               <p>The Faculty-wide Global Engineering Challenge Week is a compulsory part of the first-year programme, and the
                 project has been designed to develop student academic, transferable and employability skills as well as widen
                 their horizons as global citizens.
@@ -264,7 +264,7 @@
             <div class="mobile-desciption-inner">
               <h1>Cognitive Psychology</h1>
               <h2>ACADEMIC YEAR 2020-21</h2>
-              <img src="./img/temp.jpg" alt="temp.jpg" />
+              <img src="./img/degree_programme/cognitive_psychology.jpg" alt="module picture" />
               <p>This unit provides an overview of core components of cognition, and principles of their investigation. The
                 module covers perception, attention, performance, cognitive neuroscience, language, learning, memory and reasoning.
               <br>
