adjust left padding of module titles

--- a/degree-programme.html
+++ b/degree-programme.html
@@ -269,7 +269,7 @@
                 module covers perception, attention, performance, cognitive neuroscience, language, learning, memory and reasoning.
               <br>
               <br>
-                It introduces and explored key concepts, theoretical perspectives and foundational methods. Examples of key studies
+                It introduces and explores key concepts, theoretical perspectives and foundational methods. Examples of key studies
                 in cognitive psychology will be considered critically.
               </p>
             </div>
