add programme overview to degree programme page

--- a/degree-programme.html
+++ b/degree-programme.html
@@ -69,7 +69,16 @@
     <img class="logo" id="logo-desktop" src="./img/header/logo_transparent.png" alt="logo"/>
   </header>
     <main>
-      <h1 id="prefix">My year 1 modules:</h1>
+      <h1 id="course">Artificial Intelligence and Computer Science MComp</h1>
+      <p id="overview">
+        This course is about biologically inspired algorithms, their relationship to living biological intelligence
+        and the nature of consciousness itself.
+        <br>
+        <br>
+        Some modules overlap with the main Computer Science degree, so that students get the same solid grounding in the fundamentals.
+        Specialization in speech recognition, language processing or robotics are only some of the many possibilities.
+      </p>
+      <h2 id="prefix">My year 1 modules:</h2>
       <div id="mobile">
         <section id="mobile-module-1">
           <div id="mobile-module-1-title" class="mobile-title first">
