finish mobile version of degree programme page

--- a/degree-programme.html
+++ b/degree-programme.html
@@ -101,6 +101,9 @@
                 <br>
                 A major part of the module involves students working in teams to develop a web-based software system,
                 which gives practical experience in teamwork and managing software projects and their products.</p>
+              <div class="bar-to-close">
+                <div class="bar-to-close-inner"></div>
+              </div>
             </div>
           </div>
         </section>
@@ -125,6 +128,9 @@
                 <br>
                 The intention is to enthuse about these topics, to demonstrate why they are important to us, to lay the foundations
                 of their knowledge and prepare students for future computing courses.</p>
+                <div class="bar-to-close">
+                  <div class="bar-to-close-inner"></div>
+                </div>
             </div>
           </div>
         </section>
@@ -150,6 +156,9 @@
                 Initial focus is placed on the structured aspects typical of
                 many programming languages: the ideas of a sequence, selection and repetition. The object-oriented approach to
                 building large software systems from components is then presented.</p>
+                <div class="bar-to-close">
+                  <div class="bar-to-close-inner"></div>
+                </div>
             </div>
           </div>
         </section>
@@ -174,8 +183,10 @@
               <br>
               As well as providing a first encounter with the main issues that underlie attempts to create Artificial Intelligence,
               the module also has a more practical component that introduces algorithms and data structures for AI problem solving
-              through practical programming examples, as well as hands-on experience with simple programming of robots.              
-              </p>
+              through practical programming examples, as well as hands-on experience with simple programming of robots.</p>
+              <div class="bar-to-close">
+                <div class="bar-to-close-inner"></div>
+              </div>
             </div>
           </div>
         </section>
@@ -202,6 +213,9 @@
                 This module will cover the basics of networks and internetworking, the Web
                 in society, including information security and the technologies that are used in Web development, with an emphasis on
                 building a simple interactive website using HTML, CSS and JavaScript.</p>
+                <div class="bar-to-close">
+                  <div class="bar-to-close-inner"></div>
+                </div>
             </div>
           </div>
         </section>
@@ -227,8 +241,10 @@
               <br>
                 Techniques for designing efficient algorithms are taught, including efficient data structures for storing
                 and retrieving data. This is done using illustrative and fundamental problems: searching, sorting, graph
-                algorithms, and combinatorial problems such as finding the shortest paths in networks.
-              </p>
+                algorithms, and combinatorial problems such as finding the shortest paths in networks.</p>
+              <div class="bar-to-close">
+                <div class="bar-to-close-inner"></div>
+              </div>
             </div>
           </div>
         </section>
@@ -254,8 +270,10 @@
               <br>
               Working in multi-disciplinary groups of six, for a full week, all students in the Faculty choose from a number
               of projects arranged under a range of themes including Water, ICT, Waste Management and Energy with scenarios
-              set in a developing country.
-              </p>
+              set in a developing country.</p>
+              <div class="bar-to-close">
+                <div class="bar-to-close-inner"></div>
+              </div>
             </div>
           </div>
         </section>
@@ -279,8 +297,10 @@
               <br>
               <br>
                 It introduces and explores key concepts, theoretical perspectives and foundational methods. Examples of key studies
-                in cognitive psychology will be considered critically.
-              </p>
+                in cognitive psychology will be considered critically.</p>
+              <div class="bar-to-close">
+                <div class="bar-to-close-inner"></div>
+              </div>
             </div>
           </div>
         </section>
