change arrow layout & animation and add media query for orientation: landscape

--- a/degree-programme.html
+++ b/degree-programme.html
@@ -305,8 +305,41 @@
           </div>
         </section>
       </div>
+      <div id="desktop">
+        <div id="desktop-left">
+          <section id="desktop-module-1">
+            <div id="desktop-module-1-title" class="desktop-title">
+              <div class="desktop-title-inner">
+                <h2>COM1001</h2>
+                <div class="desktop-title-inner-arrow">
+                  <div class="desktop-title-inner-line-1"></div>
+                  <div class="desktop-title-inner-line-2"></div>
+                </div>
+              </div>
+            </div>
+            <div id="desktop-module-1-description" class="desktop-description">
+              <div class="desktop-desciption-inner">
+                <h1>Introduction to Software Engineering</h1>
+                <h2>ACADEMIC YEAR 2020-21</h2>
+                <img src="./img/degree_programme/software_engineering.jpg" alt="module picture" />
+                <p>This module introduces the Software Engineering concepts that are needed to develop software systems
+                  that can meet basic functional requirements within a given problem domain.
+                  <br>
+                  <br>
+                  A major part of the module involves students working in teams to develop a web-based software system,
+                  which gives practical experience in teamwork and managing software projects and their products.</p>
+              </div>
+            </div>
+          </section>
+        </div>
+        <div id="desktop-right">
+          
+        </div>
+      </div>
       <p id="more-info">More information available here:<br>
-        <a href="https://www.sheffield.ac.uk/programmeregulationsfinder/programme?code=COMU119&org=SHEFFIELD&start=24-Sep-2018&moa=FT&year=2020">PROGRAMME INFORMATION</a>
+        <a href="https://www.sheffield.ac.uk/programmeregulationsfinder/programme?code=COMU119&org=SHEFFIELD&start=24-Sep-2018&moa=FT
+        &year=2020">
+        PROGRAMME INFORMATION</a>
       </p>
     </main>
     <footer>
