--- a/degree-programme.html
+++ b/degree-programme.html
@@ -308,7 +308,7 @@
       <div id="desktop">
         <div id="desktop-left">
           <section id="desktop-module-1">
-            <div id="desktop-module-1-title" class="desktop-title">
+            <div id="desktop-module-1-title" class="desktop-title first">
               <div class="desktop-title-inner">
                 <h2>COM1001</h2>
                 <div class="desktop-title-inner-arrow">
@@ -331,9 +331,184 @@
               </div>
             </div>
           </section>
+          <section id="desktop-module-2">
+            <div id="desktop-module-2-title" class="desktop-title">
+              <div class="desktop-title-inner">
+                <h2>COM1002</h2>
+                <div class="desktop-title-inner-arrow">
+                  <div class="desktop-title-inner-line-1"></div>
+                  <div class="desktop-title-inner-line-2"></div>
+                </div>
+              </div>
+            </div>
+            <div id="desktop-module-2-description" class="desktop-description">
+              <div class="desktop-desciption-inner">
+                <h1>Foundations of Computer Science</h1>
+                <h2>ACADEMIC YEAR 2020-21</h2>
+                <img src="./img/degree_programme/computer-science.jpg" alt="module picture" />
+                <p>The course consists of approximately 10 blocks of 2-3 weeks work each. Each block develops mathematical
+                  concepts and techniques that are of foundational importance to computing. Lectures and problem classes will be used.
+                  <br>
+                  <br>
+                  The intention is to enthuse about these topics, to demonstrate why they are important to us, to lay the foundations
+                  of their knowledge and prepare students for future computing courses.</p>
+              </div>
+            </div>
+          </section>
+          <section id="desktop-module-3">
+            <div id="desktop-module-3-title" class="desktop-title">
+              <div class="desktop-title-inner">
+                <h2>COM1003</h2>
+                <div class="desktop-title-inner-arrow">
+                  <div class="desktop-title-inner-line-1"></div>
+                  <div class="desktop-title-inner-line-2"></div>
+                </div>
+              </div>
+            </div>
+            <div id="desktop-module-3-description" class="desktop-description">
+              <div class="desktop-desciption-inner">
+                <h1>Java Programming</h1>
+                <h2>ACADEMIC YEAR 2020-21</h2>
+                <img src="./img/degree_programme/java.jpg" alt="module picture" />
+                <p>This module introduces programming concepts through the Java programming language. Program design and the use of
+                  testing to drive program creation are also covered.
+                  <br>
+                  <br>
+                  Initial focus is placed on the structured aspects typical of
+                  many programming languages: the ideas of a sequence, selection and repetition. The object-oriented approach to
+                  building large software systems from components is then presented.</p>
+              </div>
+            </div>
+          </section>
+          <section id="desktop-module-4">
+            <div id="desktop-module-4-title" class="desktop-title">
+              <div class="desktop-title-inner">
+                <h2>COM1005</h2>
+                <div class="desktop-title-inner-arrow">
+                  <div class="desktop-title-inner-line-1"></div>
+                  <div class="desktop-title-inner-line-2"></div>
+                </div>
+              </div>
+            </div>
+            <div id="desktop-module-4-description" class="desktop-description">
+              <div class="desktop-desciption-inner">
+                <h1>Machines and Intelligence</h1>
+                <h2>ACADEMIC YEAR 2020-21</h2>
+                <img src="./img/degree_programme/machines_intelligence.jpg" alt="module picture" />
+                <p>This module provides an introduction to Artificial Intelligence, and to key concepts and problems in the field,
+                  such as whether a computer is capable of understanding, and whether humans should themselves be viewed as machines.
+                <br>
+                <br>
+                As well as providing a first encounter with the main issues that underlie attempts to create Artificial Intelligence,
+                the module also has a more practical component that introduces algorithms and data structures for AI problem solving
+                through practical programming examples, as well as hands-on experience with simple programming of robots.</p>
+              </div>
+            </div>
+          </section>
+          <section id="desktop-module-5">
+            <div id="desktop-module-5-title" class="desktop-title">
+              <div class="desktop-title-inner">
+                <h2>COM1008</h2>
+                <div class="desktop-title-inner-arrow">
+                  <div class="desktop-title-inner-line-1"></div>
+                  <div class="desktop-title-inner-line-2"></div>
+                </div>
+              </div>
+            </div>
+            <div id="desktop-module-5-description" class="desktop-description">
+              <div class="desktop-desciption-inner">
+                <h1>Web and Internet Technology</h1>
+                <h2>AUTUMN 2020-21</h2>
+                <img src="./img/degree_programme/web_technology.jpg" alt="module picture" />
+                <p>This module is for students studying Computer Science as a main subject. The Web and the Internet are now pervasive
+                  in modern life, providing an information resource, supporting 'cloud computing', and promoting novel, interactive
+                  solutions to computing-related activities.
+                  <br>
+                  <br>
+                  This module will cover the basics of networks and internetworking, the Web
+                  in society, including information security and the technologies that are used in Web development, with an emphasis on
+                  building a simple interactive website using HTML, CSS and JavaScript.</p>
+              </div>
+            </div>
+          </section>
+          <section id="desktop-module-6">
+            <div id="desktop-module-6-title" class="desktop-title">
+              <div class="desktop-title-inner">
+                <h2>COM1009</h2>
+                <div class="desktop-title-inner-arrow">
+                  <div class="desktop-title-inner-line-1"></div>
+                  <div class="desktop-title-inner-line-2"></div>
+                </div>
+              </div>
+            </div>
+            <div id="desktop-module-6-description" class="desktop-description">
+              <div class="desktop-desciption-inner">
+                <h1>Introduction to Algorithms and Data Structures</h1>
+                <h2>SPRING 2020-21</h2>
+                <img src="./img/degree_programme/algorithms_data.jpg" alt="module picture" />
+                <p>Algorithms and algorithmic problem solving are at the heart of computer science. This module introduces
+                  students to the design and analysis of efficient algorithms and data structures. Students learn how to
+                  quantify the efficiency of an algorithm and what algorithmic solutions are efficient.
+                <br>
+                <br>
+                  Techniques for designing efficient algorithms are taught, including efficient data structures for storing
+                  and retrieving data. This is done using illustrative and fundamental problems: searching, sorting, graph
+                  algorithms, and combinatorial problems such as finding the shortest paths in networks.</p>
+              </div>
+            </div>
+          </section>
+          <section id="desktop-module-7">
+            <div id="desktop-module-7-title" class="desktop-title">
+              <div class="desktop-title-inner">
+                <h2>FCE1001</h2>
+                <div class="desktop-title-inner-arrow">
+                  <div class="desktop-title-inner-line-1"></div>
+                  <div class="desktop-title-inner-line-2"></div>
+                </div>
+              </div>
+            </div>
+            <div id="desktop-module-7-description" class="desktop-description">
+              <div class="desktop-desciption-inner">
+                <h1>Global Engineering Challenge Week</h1>
+                <h2>AUTUMN 2020-21</h2>
+                <img src="./img/degree_programme/engineering_week.jpg" alt="module picture" />
+                <p>The Faculty-wide Global Engineering Challenge Week is a compulsory part of the first-year programme, and the
+                  project has been designed to develop student academic, transferable and employability skills as well as widen
+                  their horizons as global citizens.
+                <br>
+                <br>
+                Working in multi-disciplinary groups of six, for a full week, all students in the Faculty choose from a number
+                of projects arranged under a range of themes including Water, ICT, Waste Management and Energy with scenarios
+                set in a developing country.</p>
+              </div>
+            </div>
+          </section>
+          <section id="desktop-module-8">
+            <div id="desktop-module-8-title" class="desktop-title">
+              <div class="desktop-title-inner">
+                <h2>PSY1002</h2>
+                <div class="desktop-title-inner-arrow">
+                  <div class="desktop-title-inner-line-1"></div>
+                  <div class="desktop-title-inner-line-2"></div>
+                </div>
+              </div>
+            </div>
+            <div id="desktop-module-8-description" class="desktop-description">
+              <div class="desktop-desciption-inner">
+                <h1>Cognitive Psychology</h1>
+                <h2>ACADEMIC YEAR 2020-21</h2>
+                <img src="./img/degree_programme/cognitive_psychology.jpg" alt="module picture" />
+                <p>This unit provides an overview of core components of cognition, and principles of their investigation. The
+                  module covers perception, attention, performance, cognitive neuroscience, language, learning, memory and reasoning.
+                <br>
+                <br>
+                  It introduces and explores key concepts, theoretical perspectives and foundational methods. Examples of key studies
+                  in cognitive psychology will be considered critically.</p>
+              </div>
+            </div>
+          </section>
         </div>
-        <div id="desktop-right">
-          
+        <div id="desktop-right" class="last">
         </div>
       </div>
       <p id="more-info">More information available here:<br>
