change font sizes to rem on degree page and correct landscape layout

--- a/degree-programme.html
+++ b/degree-programme.html
@@ -91,7 +91,7 @@
             </div>
           </div>
           <div id="mobile-module-1-description" class="mobile-description">
-            <div class="mobile-desciption-inner">
+            <div class="mobile-description-inner">
               <h1>Introduction to Software Engineering</h1>
               <h2>ACADEMIC YEAR 2020-21</h2>
               <img src="./img/degree_programme/software_engineering.jpg" alt="module picture" />
@@ -118,7 +118,7 @@
             </div>
           </div>
           <div id="mobile-module-2-description" class="mobile-description">
-            <div class="mobile-desciption-inner">
+            <div class="mobile-description-inner">
               <h1>Foundations of Computer Science</h1>
               <h2>ACADEMIC YEAR 2020-21</h2>
               <img src="./img/degree_programme/computer-science.jpg" alt="module picture" />
@@ -145,7 +145,7 @@
             </div>
           </div>
           <div id="mobile-module-3-description" class="mobile-description">
-            <div class="mobile-desciption-inner">
+            <div class="mobile-description-inner">
               <h1>Java Programming</h1>
               <h2>ACADEMIC YEAR 2020-21</h2>
               <img src="./img/degree_programme/java.jpg" alt="module picture" />
@@ -173,7 +173,7 @@
             </div>
           </div>
           <div id="mobile-module-4-description" class="mobile-description">
-            <div class="mobile-desciption-inner">
+            <div class="mobile-description-inner">
               <h1>Machines and Intelligence</h1>
               <h2>ACADEMIC YEAR 2020-21</h2>
               <img src="./img/degree_programme/machines_intelligence.jpg" alt="module picture" />
@@ -201,7 +201,7 @@
             </div>
           </div>
           <div id="mobile-module-5-description" class="mobile-description">
-            <div class="mobile-desciption-inner">
+            <div class="mobile-description-inner">
               <h1>Web and Internet Technology</h1>
               <h2>AUTUMN 2020-21</h2>
               <img src="./img/degree_programme/web_technology.jpg" alt="module picture" />
@@ -230,7 +230,7 @@
             </div>
           </div>
           <div id="mobile-module-6-description" class="mobile-description">
-            <div class="mobile-desciption-inner">
+            <div class="mobile-description-inner">
               <h1>Introduction to Algorithms and Data Structures</h1>
               <h2>SPRING 2020-21</h2>
               <img src="./img/degree_programme/algorithms_data.jpg" alt="module picture" />
@@ -259,7 +259,7 @@
             </div>
           </div>
           <div id="mobile-module-7-description" class="mobile-description">
-            <div class="mobile-desciption-inner">
+            <div class="mobile-description-inner">
               <h1>Global Engineering Challenge Week</h1>
               <h2>AUTUMN 2020-21</h2>
               <img src="./img/degree_programme/engineering_week.jpg" alt="module picture" />
@@ -288,7 +288,7 @@
             </div>
           </div>
           <div id="mobile-module-8-description" class="mobile-description last">
-            <div class="mobile-desciption-inner">
+            <div class="mobile-description-inner">
               <h1>Cognitive Psychology</h1>
               <h2>ACADEMIC YEAR 2020-21</h2>
               <img src="./img/degree_programme/cognitive_psychology.jpg" alt="module picture" />
@@ -311,8 +311,8 @@
             <div class="desktop-title-inner">
               <h2>COM1001</h2>
               <div class="desktop-title-inner-arrow">
-                <div class="desktop-title-inner-line-1"></div>
-                <div class="desktop-title-inner-line-2"></div>
+                <div class="desktop-title-inner-line-1 animate-arrow"></div>
+                <div class="desktop-title-inner-line-2 animate-arrow"></div>
               </div>
             </div>
           </section>
@@ -382,7 +382,7 @@
         </div>
         <div id="desktop-right" class="last">
           <section id="desktop-module-1-description" class="desktop-description last">
-            <div class="desktop-desciption-inner">
+            <div class="desktop-description-inner">
               <h1>Introduction to Software Engineering</h1>
               <h2>ACADEMIC YEAR 2020-21</h2>
               <img src="./img/degree_programme/software_engineering.jpg" alt="module picture" />
@@ -395,7 +395,7 @@
             </div>
           </section>
           <section id="desktop-module-2-description" class="desktop-description">
-            <div class="desktop-desciption-inner">
+            <div class="desktop-description-inner">
               <h1>Foundations of Computer Science</h1>
               <h2>ACADEMIC YEAR 2020-21</h2>
               <img src="./img/degree_programme/computer-science.jpg" alt="module picture" />
@@ -408,7 +408,7 @@
             </div>
           </section>
           <section id="desktop-module-3-description" class="desktop-description">
-            <div class="desktop-desciption-inner">
+            <div class="desktop-description-inner">
               <h1>Java Programming</h1>
               <h2>ACADEMIC YEAR 2020-21</h2>
               <img src="./img/degree_programme/java.jpg" alt="module picture" />
@@ -422,7 +422,7 @@
             </div>
           </section>
           <section id="desktop-module-4-description" class="desktop-description">
-            <div class="desktop-desciption-inner">
+            <div class="desktop-description-inner">
               <h1>Machines and Intelligence</h1>
               <h2>ACADEMIC YEAR 2020-21</h2>
               <img src="./img/degree_programme/machines_intelligence.jpg" alt="module picture" />
@@ -436,7 +436,7 @@
             </div>
           </section>
           <section id="desktop-module-5-description" class="desktop-description">
-            <div class="desktop-desciption-inner">
+            <div class="desktop-description-inner">
               <h1>Web and Internet Technology</h1>
               <h2>AUTUMN 2020-21</h2>
               <img src="./img/degree_programme/web_technology.jpg" alt="module picture" />
@@ -451,7 +451,7 @@
             </div>
           </section>
           <section id="desktop-module-6-description" class="desktop-description">
-            <div class="desktop-desciption-inner">
+            <div class="desktop-description-inner">
               <h1>Introduction to Algorithms and Data Structures</h1>
               <h2>SPRING 2020-21</h2>
               <img src="./img/degree_programme/algorithms_data.jpg" alt="module picture" />
@@ -466,7 +466,7 @@
             </div>
           </section>
           <section id="desktop-module-7-description" class="desktop-description">
-            <div class="desktop-desciption-inner">
+            <div class="desktop-description-inner">
               <h1>Global Engineering Challenge Week</h1>
               <h2>AUTUMN 2020-21</h2>
               <img src="./img/degree_programme/engineering_week.jpg" alt="module picture" />
@@ -481,7 +481,7 @@
             </div>
           </section>
           <section id="desktop-module-8-description" class="desktop-description">
-            <div class="desktop-desciption-inner">
+            <div class="desktop-description-inner">
               <h1>Cognitive Psychology</h1>
               <h2>ACADEMIC YEAR 2020-21</h2>
               <img src="./img/degree_programme/cognitive_psychology.jpg" alt="module picture" />
