--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         <h1 id="welcome">Welcome!</h1>
         <img id="profile-picture" src="./img/home/profile_picture.png" alt="Picture Of Me">
         <h2 id="name">Jedrzej Golebiewski</h1>
-        <p>
+        <p id="intro">
           Yep. That's my name and this is my website :)
         </p>
         <div id="about-me-images">
