fix degree programme anchor not working

--- a/degree-programme.html
+++ b/degree-programme.html
@@ -502,8 +502,7 @@
         </div>
       </div>
       <p id="more-info">More information available here:<br>
-        <a href="https://www.sheffield.ac.uk/programmeregulationsfinder/programme?code=COMU119&org=SHEFFIELD&start=24-Sep-2018&moa=FT
-        &year=2020">
+        <a href="https://www.sheffield.ac.uk/programmeregulationsfinder/programme?code=COMU119&org=SHEFFIELD&start=24-Sep-2018&moa=FT&year=2020">
         PROGRAMME INFORMATION</a>
       </p>
     </main>
