create table & canvas on data/js page

--- a/data.html
+++ b/data.html
@@ -69,19 +69,64 @@
       <img class="logo" id="logo-desktop" src="./img/header/logo_transparent.png" alt="logo"/>
     </header>
     <main>
-      <section>
-        <img src="./img/temp.jpg" alt="temp.jpg" />
-        <h1>Lorem ipsum dolor</h1>
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-          eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
-          minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-          aliquip ex ea commodo consequat. Duis aute irure dolor in
-          reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-          pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-          culpa qui officia deserunt mollit anim id est laborum.
-        </p>
-      </section>
+      <h1>Typical time spent on a given activity throughout the week:</h1>
+      <table>
+        <thead>
+          <tr>
+            <th>Day</th>
+            <th>Sleeping</th>
+            <th>Exercising</th>
+            <th>Relaxing</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>Monday</td>
+            <td>7H</td>
+            <td>30Min</td>
+            <td>2H</td>
+          </tr>
+          <tr>
+            <td>Tuesday</td>
+            <td>8H</td>
+            <td>20Min</td>
+            <td>1H&nbsp30Min</td>
+          </tr>
+          <tr>
+            <td>Wednesday</td>
+            <td>8H</td>
+            <td>30Min</td>
+            <td>2H</td>
+          </tr>
+          <tr>
+            <td>Thursday</td>
+            <td>9H</td>
+            <td>45Min</td>
+            <td>2H&nbsp30Min</td>
+          </tr>
+          <tr>
+            <td>Friday</td>
+            <td>6H</td>
+            <td>10Min</td>
+            <td>3H</td>
+          </tr>
+          <tr>
+            <td>Saturday</td>
+            <td>7H</td>
+            <td>30Min</td>
+            <td>1H&nbsp45Min</td>
+          </tr>
+          <tr>
+            <td>Sunday</td>
+            <td>8H</td>
+            <td>30Min</td>
+            <td>2H&nbsp15Min</td>
+          </tr>
+      </tbody>
+      </table>
+      <p>Disclaimer: Data not authentic.</p>
+      <h2>Visualization:</h2>
+      <canvas></canvas>
     </main>
     <footer>
       <p id="copyright">© Jedrzej Golebiewski</p>
