complete piechart opening animation & onhover/onfocus logic

--- a/data.html
+++ b/data.html
@@ -126,7 +126,9 @@
       </table>
       <p>Disclaimer: Data not authentic.</p>
       <h2>Visualization:</h2>
-      <canvas></canvas>
+      <div id="canvas-container">
+        <canvas></canvas>
+      </div>
     </main>
     <footer>
       <p id="copyright">© Jedrzej Golebiewski</p>
