complete onhover/onfocus piechart behaviour

--- a/data.html
+++ b/data.html
@@ -127,7 +127,7 @@
       <p>Disclaimer: Data not authentic.</p>
       <h2>Visualization:</h2>
       <div id="canvas-container">
-        <canvas></canvas>
+        <canvas id="canvas"></canvas>
       </div>
     </main>
     <footer>
