--- a/data.html
+++ b/data.html
@@ -124,10 +124,54 @@
           </tr>
       </tbody>
       </table>
-      <p>Disclaimer: Data not authentic.</p>
+      <p id="disclaimer">Disclaimer: Data not authentic.</p>
       <h2>Visualization:</h2>
       <div id="canvas-container">
         <canvas id="canvas"></canvas>
+      </div>
+      <div id="options">
+        <div id="chart-type">
+          <p>Chart Type: </p>
+          <svg id="chart-1" xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-chart-pie" width="60" height="60"
+           viewBox="0 0 24 24" stroke-width="1.5" stroke="#252422" fill="none" stroke-linecap="round" stroke-linejoin="round">
+            <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+            <path d="M10 3.2a9 9 0 1 0 10.8 10.8a1 1 0 0 0 -1 -1h-6.8a2 2 0 0 1 -2 -2v-7a.9 .9 0 0 0 -1 -.8" />
+            <path d="M15 3.5a9 9 0 0 1 5.5 5.5h-4.5a1 1 0 0 1 -1 -1v-4.5" />
+          </svg>
+          <svg id="chart-2" xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-chart-bar" width="60" height="60"
+           viewBox="0 0 24 24" stroke-width="1.5" stroke="#252422" fill="none" stroke-linecap="round" stroke-linejoin="round">
+            <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+            <rect x="3" y="12" width="6" height="8" rx="1" />
+            <rect x="9" y="8" width="6" height="12" rx="1" />
+            <rect x="15" y="4" width="6" height="16" rx="1" />
+            <line x1="4" y1="20" x2="18" y2="20" />
+          </svg>
+          <svg id="chart-3" xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-chart-bubble" width="60" height="60"
+           viewBox="0 0 24 24" stroke-width="1.5" stroke="#252422" fill="none" stroke-linecap="round" stroke-linejoin="round">
+            <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+            <circle cx="6" cy="16" r="3" />
+            <circle cx="16" cy="19" r="2" />
+            <circle cx="14.5" cy="7.5" r="4.5" />
+          </svg>
+        </div>
+        <div id="color-scheme">
+          <p>Color Scheme: </p>
+          <div id="scheme-1" class="color-scheme-inner">
+            <div></div>
+            <div></div>
+            <div></div>
+          </div>
+          <div id="scheme-2" class="color-scheme-inner">
+            <div></div>
+            <div></div>
+            <div></div>
+          </div>
+          <div id="scheme-3" class="color-scheme-inner">
+            <div></div>
+            <div></div>
+            <div></div>
+          </div>
+        </div>
       </div>
     </main>
     <footer>
